# TALI

./: .cursorrules  .gitignore  ARCHITECTURE.md  Dockerfile  MAP.md  MILESTONES.md  README.md  async_dataloading.py  debug.py  examples.py  install-via-conda.sh  mamba.txt  playground.py  pyproject.toml  reinit_model.py  requirements.txt  requirements_dev.txt  run.env  setup.py
kubernetes/: jobs.py  run_kube_experiments.py  setup_secrets.sh  setup_variables.sh  tali-disk.yaml  wit-disk.yaml
notebooks/: config.yaml  dali_data_loading.ipynb  dataset_demo.py  dataset_sampling.ipynb  debugging.ipynb  download_data.py  download_via_hub.py  multi_modal_demo.ipynb  playground.ipynb  resource_calculations.ipynb  stream_data.py
tali/: boilerplate.py  callbacks.py  config.py  ctools.py  data.py  decorators.py  evaluators.py  frame_extractor.py  frames.py  models.py  run.py  run_data.py  trainers.py  utils.py  wit.py
tali/data/: data.py  data_demo.py  data_new.py  data_plus.py  data_refactor.py  minimal_data.py
tali/demo/: app.py  intro.md
tali/scripts/: convert_models_to_private.py  convert_relative_to_absolute_symlinks.py  convert_relative_to_absolute_symlinks.sh  copy_dataset.py  copy_split.py  dataset_cache_generator.py  delete_hf_models.py  download_tali.py  generate_dataset.py  generate_hf_cache_dataset.py  load_from_arrow_dir.py  mod_dataset.py  move_subdir_files_to_parent.py  organise_subfolders.py  prepare_and_upload_dataset_to_hf.py  upload_dataset_from_disk_to_hf.py  upload_git_lfs.py  upload_tali_data_to_hub.py  upload_tali_infinite.py  upload_with_hug.py  validate_dataset.py
tali_wit/: async_ops.py  boilerplate.py  callbacks.py  config.py  copy_dataset.py  ctools.py  data.py  data_plus.py  data_plus_av.py  dataset_cache_generator.py  dataset_generator.py  decorators.py  evaluators.py  frame_extractor.py  generate_dataset.py  generate_hf_cache_dataset.py  models.py  models_test.py  run.py  run_data.py  run_parallel.py  trainers.py  utils.py  wit.py
tali_wit/data/: data.py  data_plus.py
tali_wit/scripts/: copy_dataset.py  copy_split.py  dataset_cache_generator.py  gen_dataset_scales.py  generate_dataset.py  generate_hf_cache_dataset.py  git_add_script.py  mod_dataset.py  upload_tali_data_to_hub.py
tests/: models_test.py  test_dataset.py  test_dataset_equal.py  test_models.py  test_pretrained_clip_tali.py
